# DeepEnigma

./: .gitignore  Cargo.toml  README.md
docs/: app.js  index.html  neural_weights.json  style.css
docs/wasm/: deep_enigma.d.ts  deep_enigma.js  deep_enigma_bg.wasm  deep_enigma_bg.wasm.d.ts  package.json
scripts/: attacks.py  simulation.py  train_neural.py
src/: auth.rs  benchmark.rs  constant_time.rs  etpm.rs  handshake.rs  lib.rs  neural.rs  protocol.rs  rng.rs  security.rs  wasm.rs
tests/: etpm_tests.rs  test_etpm.py
