[package]
name = "deep_enigma"
version = "0.1.0"
edition = "2021"

[lib]
name = "deep_enigma"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deepenigma"
path = "src/bin/deepenigma.rs"
required-features = ["std"]

[dependencies]
pyo3 = { version = "0.22", optional = true }
rand = { version = "0.8", default-features = false, features = ["alloc", "getrandom"] }
rand_chacha = { version = "0.3", default-features = false }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }

[features]
default = ["std", "extension-module"]
std = ["rand/std", "sha2/std", "hkdf/std", "zeroize/std", "hex/std"]
extension-module = ["pyo3", "pyo3/extension-module"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
